--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,7 +1,7 @@
 
 /* CSS untuk bagian hero (bagian utama yang biasanya menampilkan 
 gambar atau teks utama di halaman) */
-.hero {
+.beranda {
 
     background-color: #fff;
     padding-top: 7rem;
@@ -33,20 +33,7 @@ gambar atau teks utama di halaman) */
     margin-bottom: 2rem;
   }
 
-  /* CSS untuk tombol eksplorasi di dalam hero */
-  .btn-explore {
-    background-color: #9c6b3b;
-    color: white;
-    padding: 0.75rem 2rem;
-    border-radius: 999px;
-    font-weight: bold;
-    transition: background 0.3s;
-  }
-
-  /* CSS saat hover pada tombol eksplorasi */
-  .btn-explore:hover {
-    background-color: #7e5229;
-  }
+  
 
   /* CSS untuk pengaturan gambar di dalam bagian hero */
   .hero-images {
@@ -82,4 +69,12 @@ gambar atau teks utama di halaman) */
   .hero-images .main-img img {
     aspect-ratio: 4 / 3;
   }
+
+
   
+  
+  
+
+
+
+
