--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -6,4 +6,5 @@
 @import './hero.css';
 @import './responsive.css';
 @import './landing-page.css';
-@import './footer.css'
+@import './footer.css';
+@import './btn.css'
