--- a/src/styles/landing-page.css
+++ b/src/styles/landing-page.css
@@ -42,6 +42,8 @@
   line-height: 1.4;
 }
 
+
+
 /* ========== KENAPA HARUS CERITA BUDAYA ========== */
 .alasan-cerita {
   padding-bottom: 1rem;
@@ -62,7 +64,7 @@
 }
 
 .alasan-item {
-  margin-bottom: 3rem;
+  /* margin-bottom: 1rem; */
   margin-top: 3rem;
 }
 
@@ -113,6 +115,7 @@
 /* ========== RESPONSIVE ========== */
 @media (max-width: 768px) {
   .alasan-grid {
+    gap: 2rem;
     grid-template-columns: 1fr;
   }
 
