--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,5 +8,6 @@
 @import './footer.css';
 @import './btn.css';
 @import './notifikasi.css';
-@import './admin-page.css'
+@import './admin-page.css';
+@import './manajemen-page.css';
 
