menyelesaikan file profil dan menammbahkan fungsi nya, menambahkan file ringkasan juga

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,4 +11,5 @@
 @import './admin-page.css';
 @import './manajemen-page.css';
 @import './profil-pengguna.css';
-@import './add-cerita.css'
+@import './add-cerita.css';
+@import './ringkasan.css';
