--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,4 +12,4 @@
 @import './manajemen-page.css';
 @import './profil-pengguna.css';
 @import './add-cerita.css';
-@import './ringkasan.css';
+@import './kamera.css';
