fix bug in detail-page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,5 +13,5 @@
 @import './profil-pengguna.css';
 @import './add-cerita.css';
 @import './ringkasan.css';
-@import './detail-page.css'
+@import './detail-page.css';
 @import './kamera.css';
