--- a/src/styles/add-cerita.css
+++ b/src/styles/add-cerita.css
@@ -36,7 +36,7 @@ textarea {
 }
 
 button {
-  padding: 0.75rem 1.5rem;
+  /* padding: 0.75rem 1.5rem; */
   border: none;
   border-radius: 8px;
   cursor: pointer;
