--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,3 +15,5 @@
 @import './ringkasan.css';
 @import './detail-page.css';
 @import './kamera.css';
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap');
