--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -84,15 +84,6 @@
 /* ====================================
    HEADER STICKY & SCROLL SETTINGS
 ==================================== */
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #fff;
-  z-index: 1000;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
 
 
 #landing-page {
@@ -277,5 +268,10 @@ section {
 .btn-tambah-cerita:hover {
   background-color: #9c6b3b;
 }
+
+
+
+
+/* BARU */
 
 
