--- a/src/styles/profil-pengguna.css
+++ b/src/styles/profil-pengguna.css
@@ -109,7 +109,7 @@
     max-height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -169,4 +169,3 @@
       height: 100px;
     }
   }
-  
