--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,5 +15,6 @@
 @import './ringkasan.css';
 @import './detail-page.css';
 @import './kamera.css';
+@import './transition.css';
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap');
