perbaikan PWA, SPA, MVP, INDEXDB, MANIFEST DAN ANIMASI Router

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,5 +16,6 @@
 @import './detail-page.css';
 @import './kamera.css';
 @import './transition.css';
+@import './popUp.css';
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&display=swap');
