--- a/src/styles/btn.css
+++ b/src/styles/btn.css
@@ -98,7 +98,7 @@
   background-size: cover;
   background-image: url('../../public/images/borobudur.jpg');
   background-position: center;
-  height: 90vh;
+  height: 100vh;
   position: relative;
   display: flex;
   align-items: center;
@@ -134,18 +134,18 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 2rem;
+  /* padding-top: 2rem; */
   flex-wrap: wrap;
-  margin-bottom: 1.5rem;
+  /* margin-bottom: 1.5rem; */
 }
 .section-header h2 {
   margin: 0;
 }
 
 .filter-bar {
-  display: flex;
-  gap: 1rem;
-  margin-bottom: 1.5rem;
+  /* display: flex; */
+  gap: 2rem;
+  /* margin-bottom: 1.5rem; */
 }
 .filter-bar button {
   padding: 0.5rem 1rem;
